# submodule-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
HelloWorldApp/: CMakeLists.txt  HelloWorldApp.cpp
